service: modified getAllBooks to support pagination and created PaginatedResponse dto